--- a/Coiffure/Properties/Resources.resx
+++ b/Coiffure/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="delete_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="left_arrow_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\left_arrow_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="left_arrow_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\left_arrow_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +144,9 @@
   </data>
   <data name="pexels-nick-demou-1319459" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-nick-demou-1319459.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pexels-nick-demou-1319462" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pexels-nick-demou-1319462.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="account_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\account_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,16 +166,13 @@
   <data name="user_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="customer_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\customer_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="pexels-nick-demou-13194601" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pexels-nick-demou-13194601.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="left_arrow_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\left_arrow_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="customer_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\customer_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pexels-nick-demou-1319462" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pexels-nick-demou-1319462.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="left_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\left_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
