--- a/Coiffure/Properties/Resources.resx
+++ b/Coiffure/Properties/Resources.resx
@@ -220,6 +220,9 @@
   <data name="reserve_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reserve_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="eye_24px_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eye_24px_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="barber_chair_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\barber_chair_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -240,6 +243,9 @@
   </data>
   <data name="left_arrow_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\left_arrow_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="server_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\server_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="close_window_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close_window_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -283,7 +289,7 @@
   <data name="invert_colors_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\invert_colors_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="eye_24px_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\eye_24px_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pexels-panumas-nikhomkhai-1148820 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pexels-panumas-nikhomkhai-1148820 (1).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
